Integrated frontend (React + Vite) with backend